completed till mulththreading chapter 1